# rome

./: .gitignore  .gitmodules  README.md  build.sh  clean.sh  configure.sh
core/: CMakeLists.txt  build.sh
core/src/: prelude.cpp  prelude.h  prelude.hpp
core/src/app/: app.cpp  app.h  app.hpp  strategy.cpp  strategy.h  strategy.hpp  twin_threads.cpp  twin_threads.h  twin_threads.hpp
core/src/chrono/: framerate.h  rate.cpp  rate.h  rate.hpp  timer.cpp  timer.h  timer.hpp
core/src/concurrency/: thread.cpp  thread.hpp
core/src/container/: bitset.hpp  sparse_set.hpp
core/src/crypto/: md5.cpp  md5.hpp
core/src/debug/: exception.cpp  exception.hpp  log.cpp  log.h  log.hpp  metrics.cpp  metrics.h  metrics.hpp
core/src/ecs/: ecs.hpp  world.hpp
core/src/ecs/component/: component.hpp  pool.hpp  registry.cpp  registry.hpp  storage.hpp
core/src/ecs/entity/: entity.cpp  entity.hpp  registry.cpp  registry.hpp
core/src/ecs/event/: bus.cpp  bus.hpp  event.hpp  registry.cpp  registry.hpp
core/src/ecs/system/: descriptor.cpp  descriptor.hpp  group.cpp  group.hpp  registry.cpp  registry.hpp  system.cpp  system.hpp  view.hpp
core/src/entry/: application.cpp  application.h  entry.cpp  entry.h  entry.hpp
core/src/platform/: platform.h  platform.hpp  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
core/src/reflection/: field.cpp  field.hpp  primitives.hpp  reflect.cpp  reflect.hpp  string.hpp  trait.cpp  trait.hpp  uuid.cpp  uuid.h  uuid.hpp
core/src/reflection/traits/: field.cpp  field.hpp
core/src/thread/: thread.cpp  thread.h  thread.hpp
core/tests/: mytest.cpp
core/tests/container/: bitset.cpp  sparse_set.cpp
core/tests/crypto/: md5.cpp
core/tests/ecs/: component.cpp  entity.cpp
core/tests/reflection/: trait.cpp  type.cpp  uuid.cpp
engine/: CMakeLists.txt  build.sh
sandbox/: CMakeLists.txt  build.sh
sandbox/src/: placeholder.cpp
